--- a/src/app/features/publishers/pages/publisher-details/publisher-details.page.less
+++ b/src/app/features/publishers/pages/publisher-details/publisher-details.page.less
@@ -210,22 +210,24 @@
 
 .assets-grid {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(0, 1fr);
   gap: 1.25rem;
   margin-bottom: 2rem;
   grid-auto-rows: 320px;
 
   @media (min-width: 768px) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   @media (min-width: 1280px) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   & > * {
+    width: 100%;
+    max-width: 100%;
     height: 100%;
-    min-height: 0;
+    min-width: 0;
   }
 }
 
